# varonis-restaurant-api

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/models/: restaurant.py
app/repositories/: base.py  dynamodb.py  memory.py
app/services/: recommendation.py
docs/: api.md  application-architecture.drawio  architecture.md  cicd-architecture.drawio  decision-log.md  deployment.md  eks-architecture.drawio  gitops-sync.drawio  monitoring.md  networking-infra.drawio  networking-infra.excalidraw  plan-approval.md  security.md  teardown.md  troubleshooting.md
helm/restaurant-api/: Chart.yaml  README.md  values.yaml
helm/restaurant-api/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  secret.yaml  service.yaml  serviceaccount.yaml
scripts/: seed_dynamodb.py
terraform/: README.md
terraform/environments/dev/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  providers.tf  tfplan  variables.tf  versions.tf
terraform/modules/arc/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/argocd/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: README.md  main.tf  outputs.tf  (+1 more)
tests/: conftest.py  test_api.py  test_logging.py  test_recommendation.py
(+24 files in other folders)
