[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-api"
version = "0.1.0"
description = "Restaurant recommendation API (Varonis DevOps take-home)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10,<2",
]

# Monorepo: only `app` is the Python package — helm/ and terraform/
# are infrastructure, not code to be packaged.
[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S"]
# S101: assert is expected in tests
per-file-ignores = { "tests/*" = ["S101"] }

[tool.mypy]
# pydantic plugin: teaches mypy about model constructors with aliases
# (populate_by_name) and validated fields.
plugins = ["pydantic.mypy"]
python_version = "3.10"
strict = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
